--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
+    "@tensorflow/tfjs-node": "^4.22.0",
+    "@tensorflow/tfjs-vis": "^1.5.1",
     "axios": "^1.7.9",
     "axios-retry": "^4.5.0",
     "bitget-api-node-sdk": "^2.1.4",
@@ -22,6 +24,7 @@
     "gate-api": "^6.94.0",
     "next": "^14.1.0",
     "node-fetch": "^3.3.2",
+    "python-shell": "^5.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
