--- a/package.json
+++ b/package.json
@@ -1,41 +1,48 @@
 {
-  "name": "funding-rate-web",
-  "version": "2.0.6",
+  "name": "arbimaster",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.3",
-    "@mui/material": "^6.4.3",
-    "@tensorflow/tfjs-node": "^4.22.0",
-    "@tensorflow/tfjs-vis": "^1.5.1",
-    "axios": "^1.7.9",
-    "axios-retry": "^4.5.0",
-    "bitget-api-node-sdk": "^2.1.4",
-    "chart.js": "^4.4.7",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
+    "@tensorflow/tfjs-node": "^4.15.0",
+    "axios": "^1.6.2",
+    "chart.js": "^4.4.0",
     "chartjs-adapter-date-fns": "^3.0.0",
-    "date-fns": "^4.1.0",
-    "express": "^4.21.2",
-    "gate-api": "^6.94.0",
-    "next": "^14.1.0",
-    "node-fetch": "^3.3.2",
-    "python-shell": "^5.0.0",
+    "date-fns": "^2.30.0",
+    "next": "^14.0.3",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.3.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-tooltip": "^5.28.0",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
-    "sqlite3": "^5.1.7"
+    "react-tooltip": "^5.26.3",
+    "socket.io-client": "^4.7.4"
   },
-  "main": "next.config.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "eslint": "^8.55.0",
+    "eslint-config-next": "^14.0.3"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "keywords": [
+    "cryptocurrency",
+    "arbitrage",
+    "funding-rate",
+    "ai",
+    "machine-learning",
+    "nextjs",
+    "react"
+  ],
+  "author": "ArbiMaster Team",
+  "license": "MIT",
+  "description": "AI-powered cryptocurrency arbitrage monitoring platform with funding rate prediction and market sentiment analysis"
 }
