--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "install:tf": "npm install @tensorflow/tfjs-node@4.15.0 --force",
+    "install:tfjs": "npm install @tensorflow/tfjs@4.15.0"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
-    "@tensorflow/tfjs-node": "^4.15.0",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "chartjs-adapter-date-fns": "^3.0.0",
@@ -28,6 +29,9 @@
   "devDependencies": {
     "eslint": "^8.55.0",
     "eslint-config-next": "^14.0.3"
+  },
+  "optionalDependencies": {
+    "@tensorflow/tfjs-node": "^4.15.0"
   },
   "engines": {
     "node": ">=18.0.0",
