--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-tooltip": "^5.26.3",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
